# pengler

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP.md  TECHNICAL_DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icon.py  generate_ico.py  generate_ico_simple.py
src-tauri/src/: config.rs  db.rs  drive_monitor.rs  file_watcher.rs  main.rs  task_manager.rs
src-tauri/src/commands/: cache.rs  cache_manager.rs  file_count.rs  import.rs  media_db.rs  mod.rs  optimizer.rs  scanner.rs  task_commands.rs  thumbnail.rs  watcher_commands.rs
src-tauri/src/models/: media.rs  mod.rs
src-tauri/src/utils/: exif.rs  hash.rs  mod.rs
src/components/Gallery/: Gallery.tsx  ThumbnailCell.tsx  TimelineScrubber.tsx
src/components/Lightbox/: MediaViewer.tsx
src/components/Sidebar/: Sidebar.tsx
src/pages/: Import.tsx  Settings.tsx  Tasks.tsx
src/stores/: appStore.ts  configStore.ts  mediaStore.ts
src/types/: config.ts  import.ts  media.ts
